<resources>
    <string name="app_name">Diabetes App</string>
    <string name="title_activity_patient__login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name_logo">korta</string>
    <string name="action_sign_in_back">CANCEL</string>
    <string name="title_activity_doctor_login">Doctor Login</string>
    <string name="patients">Patients</string>
    <string name="title_activity_doctor_dashboard">Dashboard</string>
    <string name="patient">Patient</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="phone_number">+123 456 789 234</string>
    <string name="patient_caps">PATIENT</string>
    <string name="empty_state_doctor">Add a patient and they will show up here.</string>
    <string name="chart_line">Blood Glucose</string>
    <string name="name">Name</string>
    <string name="action_sign_in_forgot">FORGOT PASSWORD</string>
    <string name="okay">OKAY</string>
    <string name="cancel">CANCEL</string>
    <string name="prompt_name">First Name</string>
    <string name="clinic">Clinic</string>
    <string name="photo">Photo</string>
    <string name="add_patient">Add Patient</string>
    <string name="next">Next</string>
    <string name="set_password">Set Username &amp; Password</string>
    <string name="delete">DELETE</string>
    <string name="submit">Submit</string>
    <string name="add_details">Add Details</string>
    <string name="session"></string>

    <string-array name="numbers">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>

    <string name="prompt_surname">Last Name</string>
    <string name="prompt_height">Height (cm)</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_weight">Weight (kg)</string>
    <string name="chart_summary">mmol/L</string>
    <string name="start_date">START</string>
    <string name="end_date">END</string>
    <string name="submit_date">UPDATE</string>
    <string name="average_bg">Average BG = 6.2444 +/-2.077412098</string>
    <string name="prompt_username">Username</string>
    <string name="username_hint">e.g. John</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="all_readings">All Readings</string>
    <string name="graph_list_view">Readings</string>
    <string name="update_patient">Update Patient</string>
    <string name="update_details">Edit Details</string>
    <string name="edit">Edit</string>
    <string name="doctor_id">Doctor ID</string>
    <string name="log">COMMENTS</string>
    <string name="add_comment">COMMENT</string>
    <string name="new_comment">ADD COMMENT</string>
    <string name="next_reminder">Remind me to contact patient in:</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Here are the list of patients you have not seen in a while:</string>
    <string name="prompt_comment">Comment</string>
</resources>
